--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 </style>
 </head>
 <body>
-<h1>FOCUS ON GOAL NOT HOLES!</h1>
+<h1>FOCUS ON YOUR GOALS NOT 0N HOLES!</h1>
 <p>If you see this page, the nginx web server is successfully installed and
 working. Further configuration is required.</p>
 
